--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -18,5 +18,6 @@
 			{% block title %}home
 			{% endblock %}
 		{% endblock %}
+		<footer>{% include "_footer.html.twig" %}</footer>
 	</body>
-</html>
+</html></body></html>
